--- a/example/loading.html
+++ b/example/loading.html
@@ -5,6 +5,6 @@
   </div>
 
   <div class="text-center">
-    <button class="pure-button pure-button-primary" ng-if="data" ng-click="modalData.close()">close</button>
+    <button class="pure-button pure-button-primary" ng-if="data" ng-click="$modal.close()">close</button>
   </div>
 </div>
