--- a/example/index.html
+++ b/example/index.html
@@ -51,6 +51,8 @@
           </div>
           <div><a href ng-click="app.openDefault()">Open with default theme</a>
           </div>
+          <div><a href ng-click="app.openThemed()">Open with custom theme</a>
+          </div>
           <div><a href ng-click="app.avoidEscape()">Avoid closing by escape</a>
           </div>
           <div><a href ng-click="app.openWithAnimateCss()">Open using animate css effects</a>
